--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.2",
         "laravolt/indonesia": "^0.32.0",
+        "maatwebsite/excel": "^3.1",
+        "php-ai/php-ml": "^0.9.0",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables": "^1.5",
         "yajra/laravel-datatables-oracle": "^9.19"
